# crudy-backend

./: README.md  requirements.txt
pyworker-test/: package-lock.json  package.json  pyproject.toml  wrangler.jsonc
pyworker-test/public/: _headers
pyworker-test/src/: entry.py  manage.py
pyworker-test/src/inventory/: models.py  views.py
pyworker-test/src/managers/: urls.py
pyworker-test/src/wearhaus/: settings.py  urls.py  wsgi.py
wearhaus/inventory/: urls.py  views.py
wearhaus/inventory/migrations/: 0001_initial.py  0002_alter_item_description.py  0003_auto_20260118_2324.py
wearhaus/managers/: urls.py  views.py
wearhaus/wearhaus/: asgi.py  settings.py  urls.py
